--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "etherian-mediator",
+  "name": "etheria-mediator",
   "version": "1.0.0",
   "description": "My own Discord bot",
   "main": "bot.js",
